##############################################################################
# FILE:        src/CMakeLists.txt
##############################################################################

#============================================================================
# List the subdirectories to build...
#============================================================================
add_subdirectory(feature_detection)
# add_subdirectory(feature_mapping)
# add_subdirectory(outlier_detection)
# add_subdirectory(camera_transformation)
# add_subdirectory(visual_odometry)
##############################################################################
#                           END of CMakeLists.txt
##############################################################################

